--- a/app/views/static_pages/account.html.erb
+++ b/app/views/static_pages/account.html.erb
@@ -2,8 +2,8 @@
 <h1>アカウント一覧</h1>
 <p>
                 
-<div class="layout">
-    <a href="" >新規登録</a>
+<div class="button">
+	<td><%= link_to "新規企業発行", account_new_path %></li>
 </div>
 
 <table class="table">
@@ -22,14 +22,14 @@
       <td>コスパクリエーション</td>
       <td>田中太郎</td>
       <td>有効</td>
-      <td><%= link_to "編集", account_path %></li>
+      <td><%= link_to "編集", account_edit_path %></li>
     </tr>
     <tr>
       <td>2</td>
       <td>コスパクリエーション</td>
       <td>田中次郎</td>
       <td>無効</td>
-      <td><%= link_to "編集", account_path %></li>
+      <td><%= link_to "編集", account_edit_path %></li>
     </tr>
     </tr>
     <tr>
@@ -37,7 +37,7 @@
       <td>エバーキュー</td>
       <td>田中小次郎</td>
       <td>有効</td>
-      <td><%= link_to "編集", account_path %></li>
+      <td><%= link_to "編集", account_edit_path %></li>
     </tr>
     </tr>
   </tbody>
