--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Login",   login_path %></li>
           <li><%= link_to "Account", account_path %></li>
+          <li><%= link_to "Password", account_pass_path %></li>
           <li><%= link_to "Help",    help_path %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
