--- a/app/views/static_pages/account_add.html.erb
+++ b/app/views/static_pages/account_add.html.erb
@@ -13,14 +13,14 @@
             <label class="control-label" for="input01">氏名</label>
             <div class="controls">
                 <input type="text" class="input-xlarge" id="name">
-                <p class="help-block">全角文字</p>
+                <p class="help-block">※全角文字</p>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="input01">メールアドレス</label>
             <div class="controls">
                 <input type="text" class="input-xlarge" id="email">
-                <p class="help-block">半角英数</p>
+                <p class="help-block">※半角英数</p>
             </div>
         </div>
         <div class="control-group">
