--- a/app/views/static_pages/item_edit.html.erb
+++ b/app/views/static_pages/item_edit.html.erb
@@ -8,6 +8,26 @@
 <p>
 <form class="form-horizontal">
     <fieldset>
+         <div class="control-group">
+            <label class="control-label" for="input01">関連商品グループ</label>
+            <div class="controls">
+                <select id="select01">
+                    <option>布団</option>
+                    <option>椅子</option>
+                    <option>ベッド</option>
+                </select>
+             </div>
+         </div>
+         <div class="control-group">
+            <label class="control-label" for="input01">運送会社</label>
+            <div class="controls">
+                <select id="select01">
+                    <option>運送会社A</option>
+                    <option>運送会社B</option>
+                    <option>運送会社C</option>
+                </select>
+             </div>
+        </div>
         <div class="control-group">
             <label class="control-label" for="input01">販売商品名</label>
             <div class="controls">
