--- a/app/views/static_pages/grp.html.erb
+++ b/app/views/static_pages/grp.html.erb
@@ -19,6 +19,7 @@
       <th>No</th>
       <th>商品名</th>
       <th>素材名</th>
+      <th>タイプ</th>
       <th>状態</th>
       <th>編集</th>
     </tr>
@@ -28,6 +29,7 @@
       <td>1</td>
       <td>布団</td>
       <td>素材○○</td>
+      <td>WEBページ</td>
       <td>承認待ち</td>
       <td><%= link_to "編集", grp_edit_path %></li>
     </tr>
@@ -35,6 +37,7 @@
       <td>2</td>
       <td>テーブル</td>
       <td>素材○○</td>
+      <td>画像</td>
       <td>無効</td>
       <td><%= link_to "編集", grp_edit_path %></li>
     </tr>
@@ -43,6 +46,7 @@
       <td>3</td>
       <td>椅子</td>
       <td>素材○○</td>
+      <td>バナー</td>
       <td>有効</td>
       <td><%= link_to "編集", grp_edit_path %></li>
     </tr>
