--- a/app/views/static_pages/grp_edit.html.erb
+++ b/app/views/static_pages/grp_edit.html.erb
@@ -21,27 +21,24 @@
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="input01">WEBページ</label>
-			<div class="controls">
-                <input id="lefile" type="file" style="display:none">
-                <div class="input-append">
-                    <input id="photoCover" class="input-large" type="text">
-                    <a class="btn" onclick="$('input[id=lefile]').click();">参照</a>
-                </div>
+            <label class="control-label">タイプ</label>
+            <div class="controls">
+                <label class="radio">
+                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                    WEBページ
+                </label>
+                <label class="radio">
+                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                    画像
+                </label>
+                <label class="radio">
+                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                    バナー
+                </label>
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="input01">画像</label>
-			<div class="controls">
-                <input id="lefile" type="file" style="display:none">
-                <div class="input-append">
-                    <input id="photoCover" class="input-large" type="text">
-                    <a class="btn" onclick="$('input[id=lefile]').click();">参照</a>
-                </div>
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="input01">バナー</label>
+            <label class="control-label" for="input01">素材</label>
 			<div class="controls">
                 <input id="lefile" type="file" style="display:none">
                 <div class="input-append">
