--- a/app/views/static_pages/approval_edit.html.erb
+++ b/app/views/static_pages/approval_edit.html.erb
@@ -2,6 +2,7 @@
 <h1>商品承認</h1>
 <p>
 <p class="lead">新20色羽根布団8点セット(ベッドタイプ・シングル) </p>
+<p class="lead">【未登録商品】</p>
   <div  class="container">
     <blockquote>
       <p>商品基本情報</p>
@@ -96,7 +97,7 @@
           </tr>
         </tbody>
     </table>
-    <p>
+    <hr>
     <blockquote>
       <p>素材</p>
       <small>画像</small>
@@ -104,17 +105,16 @@
     <table class="table">
         <tbody>
           <tr>
-            <th>ピンク</th>
+            <th style="vertical-align: middle; padding: 3px;"><img style="width: 50px; padding: 3px;" src="g/040203115_g_001_bt_huton_m_m.jpg">ピンク</th>
             <td width="100"><a href="g/040203115_g_001_bt_huton_m_m.jpg" target="_blanck">確認</a></td>
           </tr>
           <tr>
-            <th>グリーン</th>
-            <td><a href="g/040203115_g_002_bt_huton_m_m.jpg" target="_blanck">確認</a></td>
+            <th style="vertical-align: middle; padding: 3px;"><img style="width: 50px; padding: 3px;" src="g/040203115_g_002_bt_futon_m_m.jpg">グリーン</th>
+            <td><a href="g/040203115_g_002_bt_futon_m_m.jpg" target="_blanck">確認</a></td>
           </tr>
         </tbody>
     </table>
     <blockquote>
-      <p>素材</p>
       <small>WEBページ</small>
     </blockquote>
     <table class="table">
@@ -130,7 +130,6 @@
         </tbody>
     </table>
     <blockquote>
-      <p>素材</p>
       <small>バナー</small>
     </blockquote>
     <table class="table">
