承認修正　アコーディオン

--- a/app/views/static_pages/stock_edit.html.erb
+++ b/app/views/static_pages/stock_edit.html.erb
@@ -3,30 +3,10 @@
 <p>
 <p class="lead">新20色羽根布団8点セット(ベッドタイプ・シングル) </p>
 <p class="lead">【未登録商品】</p>
-
-<div class="accordion" id="accordion2">
-    <div class="accordion-group">
-        <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-            商品基本情報
-            </a>
-        </div>
-        <div id="collapseOne" class="accordion-body collapse in">
-            <div class="accordion-inner">
   <div  class="container">
     <blockquote>
       <p>商品基本情報</p>
     </blockquote>
-<form class="form-horizontal">
-    <fieldset>
-        <div class="control-group">
-            <label style="width:50px;" class="control-label" for="input01">商品ID</label>
-            <div style="margin-left:60px;" class="controls">
-                <input type="text" class="input-xlarge" id="item_disp_name">
-            </div>
-        </div>
-    </fieldset>
-</form>
     <table class="table">
         <tbody>
           <tr>
@@ -71,100 +51,53 @@
           </tr>
         </tbody>
     </table>
-            </div>
-        </div>
-    </div>
-    <div class="accordion-group">
-        <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-            SKU情報
-            </a>
-        </div>
-        <div id="collapseTwo" class="accordion-body collapse">
-            <div class="accordion-inner">
     <blockquote>
-      <p>SKU</p>
-      <small>カラー・サイズ</small>
+      <p>SKU1</p>
+      <small>カラー</small>
     </blockquote>
     <table class="table">
         <tbody>
           <tr>
             <td>01 : ベージュ⇒20色ではアイボリー ( BEIGE )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>02 : オレンジイエロー⇒20色ではひまわり ( ORANGE・YELLOW )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>03 : サーモンピンク⇒20色ではコーラルピンク ( PINK )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>04 : グリーン⇒20色ではライムグリーン ( GREEN )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>05 : ブルー⇒20色ではピュアブルー ( BLUE )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>06 : ブラック⇒20色ではサイレントブラック ( BLACK )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>07 : ネイビー⇒20色ではミッドナイトブルー ( NAVY )</td>
-            <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
             <td>08 : ウッドオレンジ⇒20色ではサンセットオレンジ ( Wood Orange )</td>
+          </tr>
+        </tbody>
+    </table>
+    <blockquote>
+      <p>SKU2</p>
+      <small>サイズ</small>
+    </blockquote>
+    <table class="table">
+        <tbody>
+          <tr>
             <td>01 : シングル（ S ）</td>
           </tr>
           <tr>
-            <td>01 : ベージュ⇒20色ではアイボリー ( BEIGE )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>02 : オレンジイエロー⇒20色ではひまわり ( ORANGE・YELLOW )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>03 : サーモンピンク⇒20色ではコーラルピンク ( PINK )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>04 : グリーン⇒20色ではライムグリーン ( GREEN )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>05 : ブルー⇒20色ではピュアブルー ( BLUE )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>06 : ブラック⇒20色ではサイレントブラック ( BLACK )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>07 : ネイビー⇒20色ではミッドナイトブルー ( NAVY )</td>
-            <td>02 : ダブル ( M )</td>
-          </tr>
-          <tr>
-            <td>08 : ウッドオレンジ⇒20色ではサンセットオレンジ ( Wood Orange )</td>
             <td>02 : ダブル ( M )</td>
           </tr>
         </tbody>
     </table>
-            </div>
-        </div>
-    </div>
-    <div class="accordion-group">
-        <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-            素材情報
-            </a>
-        </div>
-        <div id="collapseThree" class="accordion-body collapse">
-            <div class="accordion-inner">
+    <hr>
     <blockquote>
       <p>素材</p>
       <small>画像</small>
@@ -188,12 +121,10 @@
         <tbody>
           <tr>
             <th>新20色羽根布団8点セット【30万セット突破記念キャンペーン】(ベッドタイプ&和タイプシングル)_価格あり(税抜)</th>
-            <td width="100"><a href="040203115_w_003/040203115_w_003.html" target="_blanck">ダウンロード</a></td>
             <td width="100"><a href="040203115_w_003/040203115_w_003.html" target="_blanck">確認</a></td>
           </tr>
           <tr>
             <th>価格なし:新20色羽根布団8点セット【30万セット突破記念キャンペーン】</th>
-            <td><a href="040203115_w_003/040203115_w_003.html" target="_blanck">ダウンロード</a></td>
             <td><a href="040203115_w_003/040203115_w_003.html" target="_blanck">確認</a></td>
           </tr>
         </tbody>
@@ -214,12 +145,6 @@
         </tbody>
     </table>
   </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 
 <form class="form-horizontal">
     <fieldset>
