--- a/app/views/static_pages/approval_edit.html.erb
+++ b/app/views/static_pages/approval_edit.html.erb
@@ -47,6 +47,10 @@
             <td>7,980円</td>
           </tr>
           <tr>
+            <th>料率</th>
+            <td>80%</td>
+          </tr>
+          <tr>
             <th>卸価格</th>
             <td>5,586円</td>
           </tr>
@@ -65,6 +69,22 @@
           <tr>
             <th>販売期間</th>
             <td>2008-08-19 13:00:00～2009-03-19 14:59:59</td>
+          </tr>
+          <tr>
+            <th>BtoBコピー</th>
+            <td>XXXXX</td>
+          </tr>
+          <tr>
+            <th>BtoCコピー</th>
+            <td>XXXXX</td>
+          </tr>
+          <tr>
+            <th>BtoB注意</th>
+            <td>XXXXX</td>
+          </tr>
+          <tr>
+            <th>BtoC注意</th>
+            <td>XXXXX</td>
           </tr>
         </tbody>
     </table>
